# Terra-Weather

./: CMakeLists.txt  fix.sh  fix_all.sh  fix_build.py
include/: Camera.h  HeightMap.h  HitRecord.h  Material.h  Ray.h  Renderer.h.bak  Texture.h  Window.h  WorldData.h
include/glad/: glad.h
src/: main.cpp
src/climate/: HumidityMap.cpp  HumidityMap.h  Precipitation.cpp  Precipitation.h  WeatherMap.h  WindField.cpp  WindField.h  weathermap.cpp
src/core/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Window.cpp  Window.h
src/raytracer/: Atmosphere.cpp  Atmosphere.h  BVH.cpp  BVH.h  Materials.cpp  Materials.h  RayTrace.cpp  RayTrace.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TerrainHittable.cpp  TerrainHittable.h  VolumetricCloud.cpp  VolumetricCloud.h  WeatherVolume.cpp  WeatherVolume.h
src/terrain/: HeightMap.cpp  HeightMap.h  NoiseGen.h  noisegen.cpp  shit.cpp
